prometheus/overlays/monitoring/install/alertmanager-Service.yaml
---
# Source: prometheus/templates/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  labels:
    component: "alertmanager"
    app: prometheus

  name: prometheus-alertmanager
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9093
  selector:
    component: "alertmanager"
    app: prometheus
  type: "ClusterIP"
