prometheus/overlays/monitoring/install/kube-state-metrics-Service.yaml
---
# Source: prometheus/templates/kube-state-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"

  labels:
    component: "kube-state-metrics"
    app: prometheus

  name: prometheus-kube-state-metrics
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    component: "kube-state-metrics"
    app: prometheus
  type: "ClusterIP"
