prometheus/overlays/monitoring/install/node-exporter-Service.yaml
---
# Source: prometheus/templates/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"

  labels:
    component: "node-exporter"
    app: prometheus

  name: prometheus-node-exporter
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    component: "node-exporter"
    app: prometheus
  type: "ClusterIP"
