prometheus/overlays/monitoring/install/thanos-query-frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-cache
    app.kubernetes.io/instance: thanos-query-frontend
    app.kubernetes.io/name: thanos-query-frontend
    app.kubernetes.io/version: v0.26.0
  name: thanos-query-frontend
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/component: query-cache
    app.kubernetes.io/instance: thanos-query-frontend
    app.kubernetes.io/name: thanos-query-frontend
