prometheus/overlays/monitoring/install/thanos-sidecar-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus-sidecar
    app.kubernetes.io/instance: thanos-sidecar
    app.kubernetes.io/name: thanos-sidecar
    app.kubernetes.io/version: v0.26.0
  name: thanos-sidecar
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app: prometheus
