prometheus/overlays/monitoring/install/alertmanager-Ingress.yaml
---
# Source: prometheus/templates/alertmanager-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

  labels:
    component: "alertmanager"
    app: prometheus

  name: prometheus-alertmanager
spec:
  rules:
    - host: alertmanager.production.fravega.com
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-alertmanager
              servicePort: 80
  tls:
    - hosts:
        - alertmanager.production.fravega.com
      secretName: production-fravega-com-tls
