prometheus/overlays/monitoring/install/prometheus-server-Ingress.yaml
---
# Source: prometheus/templates/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: "ClusterIssuer"
    metallb.uniberse.tf/address-pool: default
  labels:
    component: "server"
    app: prometheus

  name: prometheus-server
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: prometheus-server
                port: 
                  name: http
  tls:
    - hosts:
        - prometheus.k3s
      secretName: prometheus.k3s.cloud-tls
