prometheus/overlays/monitoring/install/thanos-ruler-Ingress.yaml
---
# Source: prometheus/templates/server-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    component: "server"
    app: tanos-ruler
  name: thanos-ruler
spec:
  rules:
    - host: thanos-ruler.production.fravega.com
      http:
        paths:
          - path: /
            backend:
              serviceName: thanos-ruler
              servicePort: 9090
  tls:
    - hosts:
        - thanos-ruler.production.fravega.com
      secretName: production-fravega-com-tls
